{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "07a4a64e-6912-4d6c-8715-a4bcaf759efc",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "e8b2a6f3-dc18-44d9-bd91-22b2e252a0ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "183150f3-67d4-485e-a2c1-35dfee93f405",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7cc4dda-818f-49ef-a5b8-288835a77ed1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de66a3b-a9c8-480b-9821-096097933a64",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}